Compile flowd with CFI and SafeStack
Signed-off-by:	Shawn Webb <shawn.webb@g2-inc.com>
Sponsored-by:	G2, Inc

--- a/usr.bin/flowd/Makefile
+++ b/usr.bin/flowd/Makefile
@@ -20,6 +20,20 @@ CFLAGS+=	\
 LDFLAGS+=	\
 		-L${.CURDIR}/../../lib/libflowd/obj
 
+##########################
+# Control-Flow Integrity #
+##########################
+
+CFLAGS+=	-fsanitize=cfi -flto -fvisibility=hidden
+LDFLAGS+=	-fsanitize=cfi -flto -fvisibility=hidden
+
+#############
+# SafeStack #
+#############
+
+CFLAGS+=	-fsanitize=safe-stack
+LDFLAGS+=	-fsanitize=safe-stack
+
 .if defined(PREFIX)
 BINDIR?=	${PREFIX}/bin
 .else
