Compile with PIE and full RELRO
Signed-off-by:	Shawn Webb <shawn.webb@g2-inc.com>
Sponsored-by:	G2, Inc

--- a/usr.bin/flowd/Makefile
+++ b/usr.bin/flowd/Makefile
@@ -20,6 +20,13 @@ CFLAGS+=	\
 LDFLAGS+=	\
 		-L${.CURDIR}/../../lib/libflowd/obj
 
+############################
+# PIE and RELRO + BIND_NOW #
+############################
+
+CFLAGS+=	-fPIC -fPIE -Wl,-z,relro -Wl,-z,now
+LDFLAGS+=	-pie
+
 ##########################
 # Control-Flow Integrity #
 ##########################
