Enable PIE, full RELRO, CFI, and SafeStack for flowd-reader
Signed-off-by:	Shawn Webb <shawn.webb@g2-inc.com>
Sponsored-by:	G2, Inc

--- a/usr.bin/flowd-reader/Makefile
+++ b/usr.bin/flowd-reader/Makefile
@@ -14,6 +14,27 @@ CFLAGS+=	\
 LDFLAGS+=	\
 		-L${.CURDIR}/../../lib/libflowd/obj
 
+############################
+# PIE and RELRO + BIND_NOW #
+############################
+
+CFLAGS+=	-fPIC -fPIE -Wl,-z,relro -Wl,-z,now
+LDFLAGS+=	-pie
+
+##########################
+# Control-Flow Integrity #
+##########################
+
+CFLAGS+=	-fsanitize=cfi -flto -fvisibility=hidden
+LDFLAGS+=	-fsanitize=cfi -flto -fvisibility=hidden
+
+#############
+# SafeStack #
+#############
+
+CFLAGS+=	-fsanitize=safe-stack
+LDFLAGS+=	-fsanitize=safe-stack
+
 .if defined(PREFIX)
 BINDIR?=	${PREFIX}/bin
 .else
